[tool.poetry]
name = "covidtracker"
version = "1.2.8"
description = "Covid-19 Canada Tracker Bot"
authors = ["Shane Chen"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
